data/issues_nolabel/nolabel_test_15936.txt
bazel ubuntu 16.04 bazel build tensorflow/python/tools:optimize_for_inference

./tensorflow/core/platform/macros.h:78:30: note: in definition of macro 'TF_PREDICT_FALSE'
#define TF_PREDICT_FALSE(x) (x)
^
./tensorflow/core/util/tensor_format.h:340:3: note: in expansion of macro 'CHECK'
CHECK(index >= 0 && index < dimension_attributes.size())
^
./tensorflow/core/util/tensor_format.h: In instantiation of 'T tensorflow::GetFilterDim(tensorflow::gtl::ArraySlice, tensorflow::FilterTensorFormat, char) [with T = long long int]':
./tensorflow/core/util/tensor_format.h:381:54:   required from here
./tensorflow/core/util/tensor_format.h:355:29: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
CHECK(index >= 0 && index < dimension_attribute.size())
^
./tensorflow/core/platform/macros.h:78:30: note: in definition of macro 'TF_PREDICT_FALSE'
#define TF_PREDICT_FALSE(x) (x)
^
./tensorflow/core/util/tensor_format.h:355:3: note: in expansion of macro 'CHECK'
CHECK(index >= 0 && index < dimension_attribute.size())
^
ERROR: /home/zyx/Desktop/code/tensorflow-master/tensorflow/contrib/lite/toco/BUILD:169:1: C++ compilation of rule '//tensorflow/contrib/lite/toco:graph_transformations' failed (Exit 1)
In file included from external/gemmlowp/public/../internal/dispatch_gemm_shape.h:20:0,
from external/gemmlowp/public/gemmlowp.h:19,
from ./tensorflow/contrib/lite/kernels/internal/common.h:48,
from ./tensorflow/contrib/lite/toco/runtime/types.h:18,
from ./tensorflow/contrib/lite/toco/model.h:25,
from ./tensorflow/contrib/lite/toco/graph_transformations/graph_transformations.h:23,
from tensorflow/contrib/lite/toco/graph_transformations/resolve_tensorflow_matmul.cc:20:
external/gemmlowp/public/../internal/../internal/kernel_default.h:88:2: error: #error "SIMD not enabled, you'd be getting a slow software fallback. Consider enabling SIMD extensions (for example usin
g -msse4 if you're on modern x86). If that's not an option, and you would like to continue with the slow fallback, define GEMMLOWP_ALLOW_SLOW_SCALAR_FALLBACK."
#error 
^
Target //tensorflow/python/tools:optimize_for_inference failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 637.451s, Critical Path: 54.99s
FAILED: Build did NOT complete successfully